--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
+html {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  max-width: 100vw; }
+  html > body {
+    display: flex;
+    flex-flow: column;
+    flex: auto;
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto';
+    font-size: 16px; }
+
+/*# sourceMappingURL=index.css.map */
