--- a/src/containers/header/index.scss
+++ b/src/containers/header/index.scss
@@ -9,11 +9,16 @@ header {
   top: 0;
   transition: 0.75s;
 
+  .MuiButton-root-125 {
+    font-size: 1.2em !important;
+  }
+
   &.transparent {
     background-color: transparent !important;
 
     .App-logo {
       max-height: 150px;
+      display: none;
     }
   }
 
@@ -41,25 +46,8 @@ header {
   background-size: cover;
   background-position: center center;
 
-  & > .title {
-    width: 100%;
-    margin-left: auto;
-    padding-left: 15px;
-    margin-right: auto;
-    padding-right: 15px;
-    color: #ffffff;
-    text-align: center;
-
-    & > h1 {
-      margin: 0;
-      font-size: 10em;
-      letter-spacing: 0.3em;
-    }
-
-    & > h4 {
-      font-size: 3em;
-      letter-spacing: 1.2em;
-      text-transform: uppercase;
-    }
+  & > .App-logo {
+    max-width: 50vw;
+    margin: 0 auto;
   }
 }
