--- a/src/containers/home/index.scss
+++ b/src/containers/home/index.scss
@@ -1,5 +1,6 @@
 .home {
   padding-bottom: 500px;
+  font-size: 1.2em;
 
   h1 {
     text-align: center;
@@ -27,6 +28,14 @@
     min-height: 250px;
     padding-top: 56%;
   }
+  .email {
+    text-align: center;
+  }
+}
 
+@media only screen and (max-width: 480px) {
+  section {
+    padding: 20px 0 !important;
+  }
 }
 
