--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,10 @@ html {
     flex: auto;
     padding: 0;
     margin: 0;
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-size: 16px; }
+    html > body .MuiDrawer-paperAnchorLeft-151 {
+      min-width: 300px;
+      align-items: center; }
 
 /*# sourceMappingURL=index.css.map */
