--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,13 @@ html{
     flex:auto;
     padding:0;
     margin:0;
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
+
+    .MuiDrawer-paperAnchorLeft-151 {
+      min-width: 300px;
+      align-items: center;
+    }
+
   }
 }
