--- a/src/containers/home/index.scss
+++ b/src/containers/home/index.scss
@@ -30,12 +30,34 @@
   }
   .email {
     text-align: center;
+
+    .btn {
+      background-color: #000000;
+      border-radius: 3px;
+      border: 0;
+      color: #ffffff;
+      height: 48px;
+      padding: 0 30px;
+      box-shadow: 0 3px 5px 2px #000000;
+      margin-top: 50px;
+    }
   }
 }
 
 @media only screen and (max-width: 480px) {
   section {
-    padding: 20px 0 !important;
+    padding: 0 !important;
+  }
+  .home {
+    padding: 30px;
+  }
+  .email {
+    .btn {
+      margin-top: 0;
+    }
+  }
+  iframe {
+    padding-top: 50px;
   }
 }
 
