--- a/src/containers/home/index.scss
+++ b/src/containers/home/index.scss
@@ -42,6 +42,13 @@
       margin-top: 50px;
     }
   }
+  .services {
+    h2 {
+      color: #ffffff;
+      font-weight: bold;
+      text-shadow: 2px 2px grey;
+    }
+  }
 }
 
 @media only screen and (max-width: 480px) {
